syntax = "proto3";
package hyperlane.mailbox.v1;

import "google/api/annotations.proto";

option go_package = "github.com/strangelove-ventures/hyperlane-cosmos/x/mailbox/types";

// Query service for hyperlane mailbox module
service Query {
  // Get current tree metadata
  rpc CurrentTreeMetadata(QueryCurrentTreeMetadataRequest)
      returns (QueryCurrentTreeMetadataResponse) {
    option (google.api.http).get = "/hyperlane/mailbox/v1/tree_metadata";
  }

  // Get domain
  rpc Domain(QueryDomainRequest) returns (QueryDomainResponse) {
    option (google.api.http).get = "/hyperlane/mailbox/v1/domain";
  }

  // Get current tree
  rpc CurrentTree(QueryCurrentTreeRequest) returns (QueryCurrentTreeResponse) {
    option (google.api.http).get = "/hyperlane/mailbox/v1/tree";
  }
}

// QueryCurrentTreeMetadataRequest is the request type for the Query/Tree
// metadata RPC method.
message QueryCurrentTreeMetadataRequest {}

// QueryCurrentTreeResponseResponse is the response type for the Query/Tree
// metadata RPC method.
message QueryCurrentTreeMetadataResponse {
  bytes root = 1;
  uint32 count = 2;
}

// QueryCurrentTreeRequest is the request type for the Query/Tree RPC method
message QueryCurrentTreeRequest {}

// QueryCurrentTreeResponse is the response type for the Query/Tree RPC method
message QueryCurrentTreeResponse {
  repeated bytes branches = 1;
  uint32 count = 2;
}

// QueryDomain is the request type for the Query/Domain RPC
// method.
message QueryDomainRequest {}

// QueryDomainResponse is the response type for the Query/Domain RPC method.
message QueryDomainResponse { uint32 domain = 1; }